# news-aggregation

./: .gitignore  pyproject.toml
app/: config.py  logging_config.py  main.py
app/bot/: base_bot.py  bot_messages.py  raw_messages.py  telegram_bot.py
app/db/: base_db.py  sql_commands.py  sqlite_db.py
app/parsers/: base_parser.py  telegram_parser.py  web_parser.py
app/utils/: post.py  tools.py  web_source.py
